# zuck

./: CODE_OF_CONDUCT.md  Cargo.toml  README.md  rust-analyzer.toml
src/: duration.rs  formatter.rs  lib.rs  units.rs  util.rs
